--- a/frontend/paginas/crearProducto.html
+++ b/frontend/paginas/crearProducto.html
@@ -74,6 +74,8 @@
 
         <script>
 
+            const baseUrl = "http://localhost:3000/api";
+
             let qualitySelect = document.getElementById("quality-select");
             let textDescription = document.getElementById("text-desc-label");
             let numberDescription = document.getElementById("number-desc-label");
@@ -115,7 +117,7 @@
 
                 try {
 
-                    let response = await fetch("http://localhost:3000/products", {
+                    let response = await fetch(`${baseUrl}/products`, {
                         method: "POST",
                         headers: {
                             "Content-Type" : "application/json"
