--- a/frontend/paginas/eliminarProducto.html
+++ b/frontend/paginas/eliminarProducto.html
@@ -60,6 +60,8 @@
 
         <script>
 
+            const baseUrl = "http://localhost:3000/api";
+
             let get_product_form = document.getElementById("get-product-form");
             let delete_product_container = document.getElementById("delete-product-container");
             let product_list = document.getElementById("product-list");
@@ -81,7 +83,7 @@
                         throw new Error(`Error en el envio de datos del formulario.`);
                     }
 
-                    let response = await fetch(`http://localhost:3000/products/${idProd}`);
+                    let response = await fetch(`${baseUrl}/products/${idProd}`);
                     
                     if(!response.ok) {
                         throw new Error(`Error ${response.status}: ${response.statusText}`);
