desacople EJS intento1

--- a/frontend/pages/editProduct.html
+++ b/frontend/pages/editProduct.html
@@ -8,19 +8,21 @@
     <script type="module" src="./productos.js" defer ></script>
 </head>
 <body>
+
     <header>
-        <div class="espaciado"></div>
-        <img id="logo" src="../recursos/logo.png" alt="Logo Fulbo$hop"/>
-        <nav id="barra-navegacion">
+        <div class="spacing"></div>
+        <img id="logo" src="./assets/img/logo.png" alt="Logo Fulbo$hop"/>
+        <nav id="nav-bar">
             <label class="switch">
-                <input type="checkbox" class="tema" id="tema">
-                <div class="riel"><span class="bola"></span></div>
-                <span class="indicador"><img src="../recursos/temaOscuro.png" alt="temaOscuro" id="indicadorTema"></span>
+                <input type="checkbox" class="theme" id="theme-input">
+                <div class="switch-rail"><span class="switch-orb"></span></div>
+                <span class="theme-sign"><img src="" alt="temaOscuro" id="theme-sign"></span>
             </label>
-            <button class="boton-navegacion" id="boton-productos">Productos</button>
-            <button class="boton-navegacion" id="boton-carrito">Carrito</button>
-            <button class="boton-navegacion" id="boton-ticket">Ticket</button>
-            <button class="boton-navegacion" id="boton-salir">Salir</button>
+            <button class="nav-button" id="btn-products">Productos</button>
+            <button class="nav-button" id="btn-new-product">Alta Producto</button>
+            <button class="nav-button" id="btn-edit-product">Modificar Producto</button>
+            <button class="nav-button" id="btn-remove-product">Eliminar Producto</button>
+            <button class="nav-button" id="btn-exit">Salir</button>
         </nav>
     </header>
 
@@ -35,7 +37,7 @@
 
                 <form id="get-product-form" autocomplete="off">
                     <label for="product-id">ID Producto</label>
-                    <input type="number" name="product-id" class="form-component" id="product-id-inpu" required>
+                    <input type="number" name="product-id" class="form-component" id="product-id-input" required>
                     <input type="submit" class="form-component" value="Obtener Producto">
                 </form>                
 
@@ -57,7 +59,7 @@
         </main>
 
         <footer>
-            <div id="datos-alumnos">
+            <div id="authors-data">
                 <p>Pérez, Gonzalo Ezequiel - Guillen, Ignacio</p>
             </div>
         </footer>
@@ -102,10 +104,10 @@
                     let producto = datos.payload[0];
 
                     let HTMLProducto = `
-                        <li class="li-listados productos-listados">
-                            <img src="${producto.image}" alt="${producto.nombre}" class="img-listados">
+                        <li class="product-item">
+                            <img src="${producto.image}" alt="${producto.nombre}" class="product-img">
                             <p>Id: ${producto.id} / ${producto.product_type} ${producto.desc_text} N°${producto.desc_number} / <strong>Precio: $${producto.price}</strong></p>
-                            <input type="button" class="listados-boton" id="edit-product-btn" value="Actualizar producto">
+                            <input type="button" class="form-button form-component" id="edit-product-btn" value="Actualizar producto">
                         </li>
                     `;
 
@@ -139,7 +141,7 @@
                         <form id="edit-product-form" autocomplete="off">
 
                             <label for="product-id" class="form-component">ID</label>
-                            <input type="number" name="product-id" class="form-component" id="product-id-input" value="${product.id}"" readonly>
+                            <input type="number" name="product-id" class="form-component" id="product-id-inputt" value="${product.id}"" readonly>
 
                             <label for="product-type" class="form-component">Tipo de Producto</label>
                             <select name="product-type" class="form-component" id="product-type-select" required>
