--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,69 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./css/estilos.css">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <script type="module" src="./index.js" defer></script>
-    <script type="module" src="./src/switchTemas.js" defer></script>
     <title>TP Integrador | Fulbo$hop</title>
 </head>
 <body>
+
     <header>
-        <div class="espaciado"></div>
-        <img id="logo" src="./recursos/logo.png" alt="Logo Fulbo$hop"/>
-        <nav id="barra-navegacion">
+        <div class="spacing"></div>
+        <img id="logo" src="./assets/img/logo.png" alt="Logo Fulbo$hop"/>
+        <nav id="nav-bar">
             <label class="switch">
-                <input type="checkbox" class="tema" id="tema">
-                <div class="riel"><span class="bola"></span></div>
-                <span class="indicador"><img src="" alt="temaOscuro" id="indicadorTema"></span>
+                <input type="checkbox" class="theme" id="theme-input">
+                <div class="switch-rail"><span class="switch-orb"></span></div>
+                <span class="theme-sign"><img src="" alt="temaOscuro" id="theme-sign"></span>
             </label>
-            <button class="boton-navegacion" id="boton-productos">Productos</button>
-            <button class="boton-navegacion" id="boton-carrito">Carrito</button>
-            <button class="boton-navegacion" id="boton-ticket">Ticket</button>
-            <button class="boton-navegacion" id="boton-salir">Salir</button>
+            <button class="nav-button" id="btn-products">Productos</button>
+            <button class="nav-button" id="btn-new-product">Alta Producto</button>
+            <button class="nav-button" id="btn-edit-product">Modificar Producto</button>
+            <button class="nav-button" id="btn-remove-product">Eliminar Producto</button>
+            <button class="nav-button" id="btn-exit">Salir</button>
         </nav>
     </header>
 
     <main>
-        <h1 id="titulo">Bienvenido a <span id="nombre-empresa">FULBO<span id="titulo-logo1">$</span>HOP</span></h1>
 
-        <div id="login">
+        <hr>
+        <h1 class="page-title">Bienvenido a <span id="company-name">FULBO<span id="logo-char">$</span>HOP</span></h1>
+        <hr>
+        
+        <section id="login-section">
 
-            <div class="form-container" id="ingreso-cliente">
+            <div id="client-login-container" class="form-container">
                 <h3 class="form-title">Ingrese su Nombre</h3>
-                <form id="form-cliente">
-                    <label for="nombre-cliente" class="form-component">Nombre</label>
+
+                <form id="client-login-form" autocomplete="off">
+                    <label for="client-name" class="form-component">Nombre</label>
                     <br>
-                    <input type="text" name="nombre-cliente" id="nombre-cliente" class="form-component" required />
+                    <input type="text" name="client-name" id="client-name" class="form-component" required />
                     <br>
-                    <input type="submit" class="form-button form-component" id="ingresar-cliente"  value="Continuar" />
+                    <input type="submit" class="form-button form-component" id="btn-client-login"  value="Continuar" />
                 </form>
+
             </div>
 
-            <div class="form-container" id="ingreso-admin">
+            <div id="admin-login-container" class="form-container">
                 <h3 class="form-title">Sección Administradores</h3>
-                <form id="form-admin">
-                    <label for="correo-admin" class="form-component">Correo</label>
+
+                <form id="admin-login-form">
+                    <label for="admin-email" class="form-component">Correo</label>
                     <br>
-                    <input type="email" name="email" id="correo-admin" class="form-component" required />
+                    <input type="email" name="admin-email" id="admin-email" class="form-component" required />
                     <br>
-                    <label for="contrasenia-admin" class="form-component">Contraseña</label>
+                    <label for="admin-password" class="form-component">Contraseña</label>
                     <br>
-                    <input type="password" name="password" id="contrasenia-admin" class="form-component" required />
+                    <input type="password" name="admin-password" id="admin-password" class="form-component" required />
                     <br>
-                    <input type="button" class="form-button form-component" id="boton-ingreso-rapido"  value="Ingreso Rápido" />
+                    <input type="button" class="form-button form-component" id="btn-quick-login"  value="Ingreso Rápido" />
                     <br>
-                    <input type="submit" class="form-button form-component" id="ingresar-admin" value="Ingresar" />
+                    <input type="submit" class="form-button form-component" id="btn-admin-login" value="Ingresar" />
                 </form>
+
             </div>
 
+        </section>
 
-
-
-        </div>
     </main>
 
     <footer>
-        <div id="datos-alumnos">
+        <div id="authors-data">
             <p>Pérez, Gonzalo Ezequiel - Guillen, Ignacio</p>
         </div>
     </footer>
