--- a/frontend/pages/newProduct.html
+++ b/frontend/pages/newProduct.html
@@ -8,19 +8,21 @@
     <script type="module" src="./productos.js" defer ></script>
 </head>
 <body>
+
     <header>
-        <div class="espaciado"></div>
-        <img id="logo" src="../recursos/logo.png" alt="Logo Fulbo$hop"/>
-        <nav id="barra-navegacion">
+        <div class="spacing"></div>
+        <img id="logo" src="./assets/img/logo.png" alt="Logo Fulbo$hop"/>
+        <nav id="nav-bar">
             <label class="switch">
-                <input type="checkbox" class="tema" id="tema">
-                <div class="riel"><span class="bola"></span></div>
-                <span class="indicador"><img src="../recursos/temaOscuro.png" alt="temaOscuro" id="indicadorTema"></span>
+                <input type="checkbox" class="theme" id="theme-input">
+                <div class="switch-rail"><span class="switch-orb"></span></div>
+                <span class="theme-sign"><img src="" alt="temaOscuro" id="theme-sign"></span>
             </label>
-            <button class="boton-navegacion" id="boton-productos">Productos</button>
-            <button class="boton-navegacion" id="boton-carrito">Carrito</button>
-            <button class="boton-navegacion" id="boton-ticket">Ticket</button>
-            <button class="boton-navegacion" id="boton-salir">Salir</button>
+            <button class="nav-button" id="btn-products">Productos</button>
+            <button class="nav-button" id="btn-new-product">Alta Producto</button>
+            <button class="nav-button" id="btn-edit-product">Modificar Producto</button>
+            <button class="nav-button" id="btn-remove-product">Eliminar Producto</button>
+            <button class="nav-button" id="btn-exit">Salir</button>
         </nav>
     </header>
 
@@ -67,7 +69,7 @@
         </main>
 
         <footer>
-            <div id="datos-alumnos">
+            <div id="authors-data">
                 <p>Pérez, Gonzalo Ezequiel - Guillen, Ignacio</p>
             </div>
         </footer>
