Funcion activación dashboard

--- a/frontend/pages/editProduct.html
+++ b/frontend/pages/editProduct.html
@@ -141,7 +141,7 @@
                         <form id="edit-product-form" autocomplete="off">
 
                             <label for="product-id" class="form-component">ID</label>
-                            <input type="number" name="product-id" class="form-component" id="product-id-inputt" value="${product.id}"" readonly>
+                            <input type="number" name="product-id" class="form-component" id="product-id-input" value="${product.id}" readonly>
 
                             <label for="product-type" class="form-component">Tipo de Producto</label>
                             <select name="product-type" class="form-component" id="product-type-select" required>
