--- a/frontend/home.html
+++ b/frontend/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
     <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
-    <script type="module" src="./index.js" defer></script>
+    <script type="module" src="./home.js" defer></script>
     <title>TP Integrador | Fulbo$hop</title>
 </head>
 <body>
